# SsaConverter

./: BasicBlock.cpp  BasicBlock.h  CFG.cpp  CFG.h  CMakeLists.txt  Codegen.cpp  Codegen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Semantics.cpp  Semantics.h  main.cpp  run.sh  test.txt  test2.txt  test3.txt  test4.txt
